--- a/Assignment 02/game.css
+++ b/Assignment 02/game.css
@@ -2,6 +2,7 @@ body {
   background:lightblue;
   font-family:calibri;
   font-size:150%;
+  font-weight:bolder;
   padding-left:75px;
   padding-right:75px;
 }
